# ha-cert-watch

./: .gitignore  .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml
custom_components/cert_watch/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
dev/: deploy.sh
tests/: conftest.py  test_tls_utils.py
