[project]
name = "ha-cert-watch-dev"
version = "0.1.0"
description = "Dev tooling for Home Assistant custom integration Cert Watch."
requires-python = ">=3.13.2"
dependencies = [
  "homeassistant>=2025.12.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.9.0",
  "pyright>=1.1.390",
  "homeassistant-stubs>=2025.12.0",
  "pre-commit>=4.0.0"
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py313"
extend-exclude = [
  ".venv",
  "__pycache__"
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["custom_components/cert_watch"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.pyright]
reportIncompatibleVariableOverride = "none"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
include = ["custom_components/cert_watch", "tests"]
